// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mmimages > [仙逆][第67集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 67,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "仙逆",
}
`;

exports[`mmimages > [剑来][全26集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 26,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "剑来",
}
`;

exports[`mmimages > [吞噬星空][第150集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 150,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "吞噬星空",
}
`;

exports[`mmimages > [宗门里除了我都是卧底][第24集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 24,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "宗门里除了我都是卧底",
}
`;

exports[`mmimages > [徒弟个个是大佬][第17集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 17,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "徒弟个个是大佬",
}
`;

exports[`mmimages > [斗破苍穹年番][第125集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 125,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "斗破苍穹年番",
}
`;

exports[`mmimages > [炼气十万年][第193集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 193,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "炼气十万年",
}
`;

exports[`mmimages > [牧神记][第9集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "牧神记",
}
`;

exports[`mmimages > [遮天][第88集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 88,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "遮天",
}
`;

exports[`mmimages > [长生界][第9集][国语中字][WEB-MKV][2160P] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "file": {
    "video": {
      "resolution": "2160P",
    },
  },
  "language": "国语中字",
  "source": "WEB-MKV",
  "tags": [],
  "title": "长生界",
}
`;
